fix alignment of numbers in instructions

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ body {
 .row {
   display: flex;
   gap: 1.5rem;
+  align-items: baseline;
 }
 
 .steps {
